Fix html overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 html {
-  overflow: scroll;
+  overflow-y: scroll;
   /* scroll-behavior: smooth; */
   width: 100%;
   height: 100%;
